@@ -13,6 +13,7 @@
 	<name>jtester parent pom</name>
 	<properties>
 		<jtester.version>1.2.0</jtester.version>
+		<test.jvm><![CDATA[-Xms128m -Xmx1024m -XX:MaxPermSize=256m -javaagent:"${settings.localRepository}/com/googlecode/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar"]]></test.jvm>
 	</properties>
 
 	<modules>
@@ -47,6 +48,30 @@
 				<artifactId>hibernate-annotations</artifactId>
 				<version>3.5.6-Final</version>
 			</dependency>
+			<dependency>
+				<groupId>com.googlecode.jmockit</groupId>
+				<artifactId>jmockit</artifactId>
+				<version>${jmockit.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.11</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.11</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<argLine>${test.jvm}</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
